exo: Fix the touch problem for ARC apps

WindowTargeter::FindTargetInRootWindow() uses the wrong touch event
location to check with the bounds of root window. It causes some touch
events are dispatched to the root window instead of the right target.
This change uses the root_location of touch events to fix the problem.

Bug: 793916
Change-Id: I4468d6e3a4608ac69fafa9236abe16a4905e3260